--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,12 +1,8 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
-    </head>
-    <body>
-        {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
-    </body>
-</html>
+{% extends 'base.html.twig' %}
+{% block title %}Conference Guestbook{% endblock %}
+{% block body %}
+    <h2>Give your feedback!</h2>
+    {% for conference in conferences %}
+        <h4>{{ conference }}</h4>
+    {% endfor %}
+{% endblock %}
